// {C} Copyright 2017 Pensando Systems Inc. All rights reserved.

syntax = "proto3";
// Configure and Manage Networks and Services.
package network;

// Mandatory imports.
import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/pensando/sw/api/protos/tenant.proto";

import "github.com/pensando/sw/api/labels/selector.proto";
import "network.proto";
import "lb.proto";
import "service.proto";
import "vrf.proto";
import "networkinterface.proto";

// Network REST API
service NetworkV1 {
    // Prefix for all resources served by this service.
    option (venice.apiPrefix) = "network";
    // API Version.
    option (venice.apiVersion) = "v1";

    option (venice.apiGrpcCrudService) = "Network";
    option (venice.apiGrpcCrudService) = "Service";
    option (venice.apiGrpcCrudService) = "LbPolicy";
    option (venice.apiGrpcCrudService) = "VirtualRouter";
    option (venice.apiGrpcCrudService) = "NetworkInterface";

    option (venice.apiRestService) = {
         Object: "Network"
         Method: [ "get", "list", "watch" ]
    };

    option (venice.apiRestService) = {
         Object: "NetworkInterface"
         Method: [ "get", "list", "watch" ]
    };
}
